--- a/_posts/2019-12-25-the-us-narrative-today.html
+++ b/_posts/2019-12-25-the-us-narrative-today.html
@@ -1689,107 +1689,107 @@ stories:
   domain: http://www.csbj.com/
   link: https://www.csbj.com/2019/12/20/distefano-focuses-on-care-for-kids/
 images:
-- name: bf-skinner-lincoln-sitting-front.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-lincoln-sitting-front.jpg
-- name: eduardo-eduardo-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-kandinsky-bv.jpg
-- name: stories-ellisisland-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellisisland-blue-circuit.jpg
-- name: hollywood-building-hollywood-building-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-rain.jpg
-- name: abe-lincoln-one-smoking-cigarette-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-00-00.jpg
-- name: white-house-lawn-white-house-window-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-pablo-blue.jpg
-- name: dragon-desert-desert-dragon-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit.jpg
-- name: sand-hand-sand-hand-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-gan-vogh.jpg
-- name: carry-load-carryload-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-kandinsky-bv.jpg
-- name: berlinwall2-berlinwall-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-monet-one.jpg
-- name: subway-subway-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-mucha-mult.jpg
-- name: la-muse-early-computer-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-early-computer-bletchley.jpg
-- name: white-house-lawn-white-house-window-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-diego-rivera1.jpg
-- name: liberty-back-statue-liberty-back-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-mucha-mult.jpg
-- name: lincoln-memorial-lincolnmemorial-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-atari-asteroids.jpg
-- name: oldcabin-oldcabin-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-neo-instinct.jpg
-- name: dragon-desert-desert-dragon-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-internet-numbers.jpg
-- name: stories-new-machine-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-machine-road-atari-missle.jpg
-- name: carry-load-carryload-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sunday.jpg
-- name: oldhouse-granaryfield-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-satan-red.jpg
-- name: old-granary-field-oldhouse-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-bright-sand.jpg
-- name: abe-lincoln-one-plentiful-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-07-91.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-purp-paper.jpg
-- name: gypsy-wagon-gypsywagon-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-oily-mcoilface.jpg
-- name: birdhouse-birdhouse-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-neo-instinct.jpg
-- name: oldcabin-store-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-dream.jpg
-- name: status-berlin-status-berlin-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-electricity.jpg
-- name: adam-smith-adam-smith-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
-- name: store-on-corner-oldcabin-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-constitution.jpg
-- name: downtheline-downtheline-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-hot-spicy.jpg
-- name: ellis-island-ellisisland-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-circuit.jpg
-- name: fence-fence-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-dry-skin.jpg
-- name: copper-circuit-DSC_0072.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0072.jpg
-- name: old-cabin-oldcabin-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dali-two.jpg
-- name: oldhotel-oldhotel-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-crunch-paper.jpg
-- name: la-muse-fire-truck-pulling-out-of-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fire-truck-pulling-out-of-station.jpg
-- name: aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
-- name: walled-garden-walled-garden-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-clean-view.jpg
-- name: oldbarn-oldbarn-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-umberto-bocc.jpg
-- name: capital-battle-capitolbattle-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purp-paper.jpg
-- name: fence-fence-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-creativity.jpg
-- name: nyc-flag-nycflag-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-constitution.jpg
-- name: statue-of-liberty-front-view-statueofliberty-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-really-hot.jpg
-- name: mediterranean-mediterranean-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-green-zuma.jpg
-- name: cargo-ship-cargo-ship-on-sea-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-satan-red.jpg
-- name: nyc-flag-nycflag-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-diego-rivera1.jpg
-- name: birdhouse-birdhouse-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-smoking-cigarette.jpg
-- name: catacombs-catacombs-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colored-circuits.jpg
-- name: fence-mexico-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-blue-brush.jpg
-- name: christianity-christianity-under-construction-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-jap-wav-pr.jpg
-- name: eduardo-eduardo-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-post-modern.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-paper.jpg
+- name: white-house-whitehouse-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-crabapple.jpg
+- name: server-cloud-server-racks-clouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
+- name: flower-barbed-wire-flower-barbed-wire-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-emily-carr.jpg
+- name: nazi-invasion-castle-window_35928999923_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-castle-window_35928999923_o.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-space-pizza.jpg
+- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+- name: powerlines-power-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-plentiful.jpg
+- name: liberty-back-statue-liberty-back-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-post-modern.jpg
+- name: statue-of-liberty-front-view-statueofliberty-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-wols.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-kand-two.jpg
+- name: old-door-lock-old-door-lock-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-green-zuma.jpg
+- name: docks-docks-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-dresden.jpg
+- name: san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-colorful-dream.jpg
+- name: old-church-oldchurch-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-oily-mcoilface.jpg
+- name: fence-mexico-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-dali-two.jpg
+- name: bf-skinner-crypto-wheels-old-compute-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-crypto-wheels-old-compute-bletchley.jpg
+- name: mosaic-face-mosaic-face-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-spagetti-accident.jpg
+- name: old-cabin-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alien-goggles.jpg
+- name: blossombar-yellow-collage-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-50-62.jpg
+- name: art-museum-art-museum-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
+- name: wind-mills-windmills-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dali-two.jpg
+- name: subway-subway-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-wols.jpg
+- name: oldhouse-granaryfield-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-circuit.jpg
+- name: old-door-lock-old-door-lock-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sunday.jpg
+- name: walled-garden-walled-garden-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-blue-brush.jpg
+- name: stalin-time-public-market-farmers-market.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-public-market-farmers-market.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-rainbow-festival.JPG
+- name: stalin-time-path-in-woods-green-lush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-path-in-woods-green-lush.jpg
+- name: fence-fence-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-wols.jpg
+- name: fence-mexico-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-diego-rivera1.jpg
+- name: aws-s3-stories-new-52-175-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-52-175-800-500-0-max-0-1--1.jpg
+- name: gypsy-wagon-gypsywagon-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-purple-storm.jpg
+- name: machine-road-machine-road-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-colorful-dream.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-electricity.jpg
+- name: aws-s3-square-old-barn-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-old-barn-square.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+- name: nyc-flag-api-conversations-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-aqua.jpg
+- name: crow-crow-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-marcel-duchamp.jpg
+- name: mosaic-face-mosaic-face-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-color.jpg
+- name: berlinwall-DSC-0084-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-mucha-mult.jpg
+- name: bordercrossing-border-traffic.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-border-traffic.jpg
+- name: bordercrossing-bordercrossing-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-far-away.jpg
+- name: razorcliff-razorcliff-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-bright-sand.jpg
+- name: old-house-oldhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
+- name: walled-garden-walled-garden-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-collage.jpg
+- name: locked-up-steam-lock-up-steam-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-purple-pond.jpg
+- name: powerlines-power-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-post-modern.jpg
+- name: aws-s3-stories-losangeles-from-observatory-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-losangeles-from-observatory-free-woman.jpg
+- name: oldcabin-store-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-atari-missle.jpg
+- name: ellis-island-ellisisland-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-purp-paper.jpg
 ---
 Dallas Cowboys Player Fulfills Childhood Dream.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;Philadelphia Woman Fatally Stabbed On Christmas Morning.&nbsp;Mayor Outlines New Plans To Address City Issues.&nbsp;Bealeton Native Has A Large Heart For Helping The Homeless.&nbsp;Iola, Ellsworth Get Incubator Grants.&nbsp;Republican Senator Disturbed By McConnell On Impeachment.&nbsp;How To Give Kids Gifts With Real Value.&nbsp;
